--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crypt",
+  "name": "@hugovidafe/crypt",
   "version": "1.0.0",
   "description": "Easy encryption and decryption",
   "main": "crypt.js",
